# LIOM

./: README.md  build.txt  debug.rviz  installation.md  rc_car.rviz  readme.md  ros2.rviz  start.yaml
camera_model/src/: intrinsic_calib.cc
camera_model/src/camera_models/: CameraFactory.cc  CostFunctionFactory.cc
camera_model/src/gpl/: EigenQuaternionParameterization.cc
docker/: Dockerfile  docker_build.sh  docker_run.sh  docker_start.bash
super_odometry/: CMakeLists.txt  debug_mapping.xml  package.xml
super_odometry/config/: ugv.yaml  violoam.rviz
super_odometry/config/dsta/: canary.yaml  canary1_calibration.yaml  canary2_calibration.yaml  canary3_calibration.yaml  drone.yaml  drone_calibration.yaml  (+12 more)
super_odometry/src/: debug_view.cpp  featureExtraction_node.cpp  imuPreintegration_node.cpp  laserMapping_node.cpp  ousterTransform.cpp  scanRegistration_node.cpp
super_odometry_msgs/: package.xml
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/config/ugv/: cmu_rc2_cam1_debug.yaml  cmu_sp1_cam1_debug.yaml  cmu_sp1_cam1_half_imagesize.yaml
vins_estimator/data/: sphere_bignoise_vertex3.g2o
vins_estimator/launch/: cam1_debug.launch  cam1_full.launch  cam1_half.launch  u_eye.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h  plot_results.py  pose_graph3d.cpp  read_g2o.h
vins_estimator/src/Frontend/: frontend.cpp  frontend.h  frontend_data.h
vins_estimator/src/factor/: SE3AbsolutatePoseFactor.cpp  SE3AbsolutatePoseFactor.h  SE3RelativtePoseFactor.cpp  SE3RelativtePoseFactor.h  imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  projection_factor.h  projection_td_factor.h
vins_estimator/src/featureTrack/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  initial_sfm_bad.cpp  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  visualization.cpp  visualization.h
(+64 files in other folders)
